tests/NormalTests/paczka1/fuzzy1/93530063.err
Error in line 1: fgmixJxwl S87 61,2
Error in line 2: fgmixJxwl S329 98,6
Error in line 13: jXYpu5V S87 68,2
Error in line 36: nN3vBRsuqI S87 99,3
Error in line 17: 6ZR59 S329 112,8
